short_open_tag should be off for production environments, same for expose_php, which raises security issues.

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -223,7 +223,7 @@ engine = On
 ; Development Value: Off
 ; Production Value: Off
 ; http://php.net/short-open-tag
-short_open_tag = On
+short_open_tag = Off
 
 ; Allow ASP-style <% %> tags.
 ; http://php.net/asp-tags
@@ -428,7 +428,7 @@ disable_classes =
 ; threat in any way, but it makes it possible to determine whether you use PHP
 ; on your server or not.
 ; http://php.net/expose-php
-expose_php = On
+expose_php = Off
 
 ;;;;;;;;;;;;;;;;;;;
 ; Resource Limits ;
