--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,4 +7,4 @@ updates:
   - package-ecosystem: "composer"
     directory: "/support/devcenter"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
